--- a/views/userfold/login.ejs
+++ b/views/userfold/login.ejs
@@ -17,8 +17,8 @@
             <div  class="col l">
                 <div class="container mt-5 shadow-lg logincol">
                     <h1 class="text-center" style="color:rgb(236, 96, 30)">log in</h1>
-                    <h5 style="color: green;"><%=locals.data%></h5>
-                    <h5 style="color:red;"><%=locals.message%></h5>
+                    <h5 style="color: green;"><%=locals?.data%></h5>
+                    <h5 style="color:red;"><%=locals?.message%></h5>
                     <form action="/login" method="POST">
                        
                   
