--- a/views/userfold/usercoupons.ejs
+++ b/views/userfold/usercoupons.ejs
@@ -96,7 +96,7 @@
     <h2>Available Coupons:</h2>
 
         <!-- Coupon Cards -->
-        <%if(mergedata.length>0){%>
+        <%if(mergedata?.length>0){%>
         <div class="row">
             <%for(var i=0;i<mergedata.length;i++){%>
             <div class="col-md-4">
