--- a/views/userfold/accountsettings.ejs
+++ b/views/userfold/accountsettings.ejs
@@ -46,15 +46,15 @@
             <div class="col-6 col-md-6 col-lg-6 col-xl-6 ">
                 <h2 style="color: rgb(248, 135, 30);">Account Settings</h2>
                 <h4>change userdetails</h4>
-                <p style="color: green;"><%=locals.message1%></p>
-                <form onsubmit="return validateForm1('<%=data.Password%>')"  method="post" action="/accountsettings" >
+                <p style="color: green;"><%=locals?.message1%></p>
+                <form onsubmit="return validateForm1('<%=data?.Password%>')"  method="post" action="/accountsettings" >
                     <div class="form-group">
                         <label for="username">Username</label>
-                        <input type="text" class="form-control" id="username" name="Username" placeholder="Your Username" value="<%=data.Username%>">
+                        <input type="text" class="form-control" id="username" name="Username" placeholder="Your Username" value="<%=data?.Username%>">
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email" name="Email" placeholder="Your Email" value="<%=data.Email%>">
+                        <input type="email" class="form-control" id="email" name="Email" placeholder="Your Email" value="<%=data?.Email%>">
                     </div>
                     <div class="form-group">
                         <label for="currentPassword">Enter Current Password</label>
@@ -64,7 +64,7 @@
                 </form>
                 <h4>change password</h4>
                 <p style="color: green;"><%=locals.message2%></p>
-                <form onsubmit="return validateForm('<%=data.Password%>')" method="post" action="/accountsettings">
+                <form onsubmit="return validateForm('<%=data?.Password%>')" method="post" action="/accountsettings">
                     <div class="form-group">
                         <label for="currentPassword">Enter Current Password</label>
                         <input type="password" class="form-control" id="currentPassword" name="currentPassword" placeholder="Current Password" >
