--- a/views/userfold/cart.ejs
+++ b/views/userfold/cart.ejs
@@ -17,17 +17,17 @@
         else if(data==null){%>
             <h1 style="color: orange;"> Is Empty</h1>
         <%}else{%>
-       <%for(var i=0;i<data.productid.length;i++){%>
+       <%for(var i=0;i<data?.productid.length;i++){%>
         <div class="cartitems mt-4" id="cartitem<%=i%>">
           <div class="image">
-             <img src="/admin/uploads/<%=data.productid[i].Images[0]%>" alt="images">
+             <img src="/admin/uploads/<%=data?.productid[i].Images[0]%>" alt="images">
           </div>
           <div class="cartcolspace">
 
           </div>
        <div class="details">
            <div class="producthead">
-               <h4><%=data.productid[i].ProductName%></h4>
+               <h4><%=data?.productid[i].ProductName%></h4>
                <i class="fas fa-trash-alt" onclick="removeitem('<%=i%>')"></i>
         </div>
         <div class="rating">
@@ -37,10 +37,10 @@
             <span class="filled-star">☆</span>
             <span class="filled-star">☆</span>
         </div>
-        <p>color:<%=data.productid[i].Color%></p>
-        <p style="font-weight: bold;">size:<%=data.size[i]%></p>
+        <p>color:<%=data?.productid[i].Color%></p>
+        <p style="font-weight: bold;">size:<%=data?.size[i]%></p>
         <div class="pricequantity">
-            <h5>₹<%=data.productid[i].OfferPrice%><del class="striked-price" style="color: rgb(164, 154, 154);"> ₹<%=data.productid[i].RealPrice%></del></h5>
+            <h5>₹<%=data?.productid[i].OfferPrice%><del class="striked-price" style="color: rgb(164, 154, 154);"> ₹<%=data?.productid[i].RealPrice%></del></h5>
             <p id="stockstatus<%=i%>" style="color: red;"></p>
             <div class="quantityandbtn">
                
@@ -116,7 +116,7 @@ total=subtotal-(subtotal-offertotal)
   <option value="selectacoupon" disabled hidden selected>click here to select coupon</option>
   <% if (mergedata.length > 0) {
     for (var i = 0; i < mergedata.length; i++) { %>
-      <option value="<%= mergedata[i]._id%>" style="color:green;font-weight: bold;"><%= mergedata[i].couponcode%></option>
+      <option value="<%= mergedata[i]?._id%>" style="color:green;font-weight: bold;"><%= mergedata[i].couponcode%></option>
     <% }
   } else { %>
     <option value="nocoupon" disabled>No Coupons Available</option>
