--- a/views/userfold/editaddress.ejs
+++ b/views/userfold/editaddress.ejs
@@ -108,38 +108,38 @@ display: block; /* Show the sidebar when toggled */
 <div class="container mt-2 col-md-9">
     <div class="container mt-3">
         <h1 style="color:#f5450d">Edit Address</h1>
-        <form action="/editaddress/<%=data.index%>" method="post">
+        <form action="/editaddress/<%=data?.index%>" method="post">
             <div class="form-group">
                 <label for="name">Name:</label>
-                <input type="text" class="form-control" id="name" name="name" placeholder="Enter name" required value="<%=data.name%>">
+                <input type="text" class="form-control" id="name" name="name" placeholder="Enter name" required value="<%=data?.name%>">
             </div>
             <div class="form-group">
                 <label for="addressName">address label</label>
-                <input type="text" class="form-control" id="address label" name="address_label" placeholder="Enter address label eg work,home" maxlength="10" required value="<%=data.address_label%>">
+                <input type="text" class="form-control" id="address label" name="address_label" placeholder="Enter address label eg work,home" maxlength="10" required value="<%=data?.address_label%>">
             </div>
             <div class="form-group">
                 <label for="state">State:</label>
-                <input type="text" class="form-control" id="state" name="state" placeholder="Enter state" required value="<%=data.state%>">
+                <input type="text" class="form-control" id="state" name="state" placeholder="Enter state" required value="<%=data?.state%>">
             </div>
             <div class="form-group">
                 <label for="city">City:</label>
-                <input type="text" class="form-control" id="city" name="city" placeholder="Enter city" required value="<%=data.city%>">
+                <input type="text" class="form-control" id="city" name="city" placeholder="Enter city" required value="<%=data?.city%>">
             </div>
             <div class="form-group">
                 <label for="country">Country:</label>
-                <input type="text" class="form-control" id="country" name="country" placeholder="Enter country" required value="<%=data.country%>">
+                <input type="text" class="form-control" id="country" name="country" placeholder="Enter country" required value="<%=data?.country%>">
             </div>
             <div class="form-group">
                 <label for="fullAddress">Full Address:<span style="font-size:10px;">(as per addaarcard)</span></label>
-                <textarea class="form-control" id="fullAddress" name="fullAddress" rows="5" placeholder="Enter full address" required><%=data.fullAddress%></textarea>
+                <textarea class="form-control" id="fullAddress" name="fullAddress" rows="5" placeholder="Enter full address" required><%=data?.fullAddress%></textarea>
             </div>
             <div class="form-group">
                 <label for="pincode">Pin Code:</label>
-                <input type="text" class="form-control" id="pincode" name="pincode" placeholder="Enter pin code" required value="<%=data.pincode%>">
+                <input type="text" class="form-control" id="pincode" name="pincode" placeholder="Enter pin code" required value="<%=data?.pincode%>">
             </div>
             <div class="form-group">
                 <label for="mobileNo">Mobile Number:</label>
-                <input type="tel" class="form-control" id="mobileNo" name="mobile_no" placeholder="Enter mobile number" required value="<%=data.mobile_no%>">
+                <input type="tel" class="form-control" id="mobileNo" name="mobile_no" placeholder="Enter mobile number" required value="<%=data?.mobile_no%>">
             </div>
             <button type="submit" class="btn btno">Edit</button>
         </form>
