--- a/views/userfold/forgotpassword.ejs
+++ b/views/userfold/forgotpassword.ejs
@@ -24,12 +24,12 @@
     </nav>
     <div class="container">
         <h2>Forgot Password</h2>
-        <p style="color: red;"><%=locals.message%></p> 
+        <p style="color: red;"><%=locals?.message%></p> 
         <!-- Email Submission Form -->
         <form id="email-form" class="form" action="/sendotpforforgot" method="POST">
             <div class="form-group">
-                <h4 style="color: red;"><%=locals.data%></h4>
-                <h4 style="color:green;"><%=locals.data4%></h4>
+                <h4 style="color: red;"><%=locals?.data%></h4>
+                <h4 style="color:green;"><%=locals?.data4%></h4>
 
                 <label for="email">Email:</label>
                 <input type="email" id="email" class="form-control" name="email" required>
@@ -45,9 +45,9 @@
             </div>
             <button type="submit" class="btn btn-success">Submit OTP</button>
         </form>
-        <h6 style="color: green;"><%=locals.data1%></h6>
-        <h6 style="color:red;"><%=locals.data2%></h6>
-        <h6 style="color:red;"><%=locals.data3%></h6>
+        <h6 style="color: green;"><%=locals?.data1%></h6>
+        <h6 style="color:red;"><%=locals?.data2%></h6>
+        <h6 style="color:red;"><%=locals?.data3%></h6>
         <!-- Password Reset Form -->
         <form id="password-form" class="form password-form" action="/resetpasswordforgot" method="POST">
             <div class="form-group">
