--- a/views/userfold/shippingaddress.ejs
+++ b/views/userfold/shippingaddress.ejs
@@ -66,7 +66,7 @@
 <div class="container mt-2 col-md-9">
     <div class="container ">
         <h1 class="shippingAddresses">shipping Addresses:</h1>
-       <%for(var i=0;i<data.length;i++){%>
+       <%for(var i=0;i<data?.length;i++){%>
         <div class="row">
             <div class="col-md-6">
                 <div class="cardo mb-3">
