--- a/views/adminfold/coupons.ejs
+++ b/views/adminfold/coupons.ejs
@@ -29,18 +29,18 @@
 
     <!-- Display Coupons -->
     <div class="row mt-3">
-       <% if(data && data.length>0){%>
-            <%for(var i=0;i<data.length;i++){%>
+       <% if(data && data?.length>0){%>
+            <%for(var i=0;i<data?.length;i++){%>
         <div class="col-md-4 mb-3">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title" style="color: orange;"><%=data[i].couponname%></h5>
-                    <p class="card-text">Coupon Code: <%=data[i].couponcode%></p>
-                    <p class="card-text">Coupon type: <%=data[i]. coupontype%></p>
-                    <p class="card-text">expiry Date: <%=data[i].expirydate%></p>
+                    <h5 class="card-title" style="color: orange;"><%=data[i]?.couponname%></h5>
+                    <p class="card-text">Coupon Code: <%=data[i]?.couponcode%></p>
+                    <p class="card-text">Coupon type: <%=data[i]?. coupontype%></p>
+                    <p class="card-text">expiry Date: <%=data[i]?.expirydate%></p>
                     <div style="display: flex;justify-content: space-around;">
-                   <a href="/editcoupons/<%=data[i]._id%>" ><button class="btn" style="background-color: orange;">View/Edit Details</button></a>
-                    <button class="btn" style="background-color: orange;" onclick="deletecoupon('<%=data[i]._id%>')">delete coupon</button>
+                   <a href="/editcoupons/<%=data[i]?._id%>" ><button class="btn" style="background-color: orange;">View/Edit Details</button></a>
+                    <button class="btn" style="background-color: orange;" onclick="deletecoupon('<%=data[i]?._id%>')">delete coupon</button>
                 </div>
                 </div>
             </div>
