--- a/views/userfold/bannerpage.ejs
+++ b/views/userfold/bannerpage.ejs
@@ -10,7 +10,7 @@
 </nav>
 <section>
     <div class="banner">
-        <img src="/admin/Uploads/<%=banner1?.banner%>" alt="">
+        <img src="/admin/uploads/<%=banner1?.banner%>" alt="">
     </div>
     <h3 style="text-align: center;margin: 0;background-color: rgb(255, 111, 0);margin-top: 10px;margin-bottom: 15px;">TRENDING</h3>
     <div id="middle"> 
