made some changes vie product

--- a/views/adminfold/viewproducts.ejs
+++ b/views/adminfold/viewproducts.ejs
@@ -29,7 +29,7 @@
                     for(i=0;i<product?.length;i++){%>
                 <tr>
                     <td><%=product[i]?._id%></td>
-                    <td style="width: 100px;"><img src="/admin/Uploads/<%=product[i].Images[1]%>" alt="" style="width: 100%;"></td>
+                    <td style="width: 100px;"><img src="/admin/uploads/<%=product[i].Images[1]%>" alt="" style="width: 100%;"></td>
                     <td><%=product[i]?.ProductName%></td>
                     <td><%=product[i]?.Catagory%></td>
                     <td><%=product[i].Brand%></td>
