made some changes vie product second time

--- a/views/userfold/productviewpage.ejs
+++ b/views/userfold/productviewpage.ejs
@@ -178,7 +178,7 @@ if (foundObject) {
 
 
                                
-                             <img src="/admin/uploads/<%=product[i].?Images[0]%>" class="card-img-top cardimage" alt="Product 1">
+                             <img src="/admin/uploads/<%=product[i]?.Images[0]%>" class="card-img-top cardimage" alt="Product 1">
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title"><%=product[i]?.ProductName%></h5>
