made some changes vie product third time

--- a/views/userfold/productviewpage.ejs
+++ b/views/userfold/productviewpage.ejs
@@ -144,7 +144,7 @@
             <!-- Product Cards -->
 
             <div class="col-md-10">
-                <%if(product?.length>0){%>
+                <%if(product.length>0){%>
                 <div class="row" id="ajaxfiltercall">
                     <%if(product?.length>0){
 
