made changes added footer

--- a/views/userfold/accountsettings.ejs
+++ b/views/userfold/accountsettings.ejs
@@ -84,6 +84,7 @@
     </div>
 
 </div>
+<%-include("./partials/footer") %>
 
 <script>
      const submitButton = document.getElementById("submit-button");
