--- a/views/userfold/checkoutpage.ejs
+++ b/views/userfold/checkoutpage.ejs
@@ -157,6 +157,8 @@
             </div>
         </div>
     </div>
+  <%-include("./partials/footer") %>
+
     <script>
        function clickaddress(){
         window.location.href="/addaddress"
