--- a/views/userfold/forgotpassword.ejs
+++ b/views/userfold/forgotpassword.ejs
@@ -61,6 +61,8 @@
             <button type="submit" class="btn btn-primary" id="submitbutton">Set New Password</button>
         </form>
     </div>
+  <%-include("./partials/footer") %>
+
 <script>
     const submitButton = document.getElementById("submitbutton");
         const passwordInput = document.getElementById("new-password");
