--- a/views/userfold/homepage2.ejs
+++ b/views/userfold/homepage2.ejs
@@ -10,6 +10,7 @@
         <img src="/user/img/cropped banner.png" alt="">
     </div>
   </section>
+  <%-include("./partials/footer") %>
 
 <!-- Include Bootstrap JS (jQuery and Popper.js) -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
