--- a/views/userfold/myreviews.ejs
+++ b/views/userfold/myreviews.ejs
@@ -183,6 +183,8 @@
 
     
   </div>
+  <%-include("./partials/footer") %>
+
 <script>
    for (var i = 0; i < "<%=data.length%>"; i++) {
         (function(index) {
