--- a/views/userfold/productviewpage.ejs
+++ b/views/userfold/productviewpage.ejs
@@ -214,6 +214,8 @@ if (foundObject) {
             </div>
         </div>
     </div>
+  <%-include("./partials/footer") %>
+
     <script>
         var data={}
         data.Brand=[]
