--- a/views/userfold/shippingaddress.ejs
+++ b/views/userfold/shippingaddress.ejs
@@ -108,6 +108,7 @@
         <a href="/addaddress" id="aforaddaddress"><h5 class="addaddress">+ Add New Address</h5></a>
     </div>
 </div>
+<%-include("./partials/footer") %>
 
 <script>
     
