--- a/views/userfold/user404page.ejs
+++ b/views/userfold/user404page.ejs
@@ -51,6 +51,7 @@
     <p>Oops! The page you are looking for might be in another universe.</p>
     <p>Return to <a href="/" style="color: #e44d26;">futstore home</a>.</p>
 </div>
+<%-include("./partials/footer") %>
 
 <script>
     function redirectToDetails(id){
