--- a/views/userfold/usersignup.ejs
+++ b/views/userfold/usersignup.ejs
@@ -54,6 +54,8 @@
             </div>
         </div>
     </section>
+  <%-include("./partials/footer") %>
+
     <script>
 const nameInput = document.getElementById("name");
 const namePattern = /^[A-Za-z\s]+$/; // This pattern matches only alphabetic characters and spaces
