--- a/views/userfold/adminlogin.ejs
+++ b/views/userfold/adminlogin.ejs
@@ -48,6 +48,7 @@
             </div>
         </div>
     </section>
+    <%-include("./partials/footer") %>
 
     <!-- Include Bootstrap JavaScript and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-SO5v5b3BY3u8pVuQa5FJ3s3SMlpb7s5K1o5Z/C4JF9x3mI1pETf5f5ECx9QQhr2qG" crossorigin="anonymous"></script>
