--- a/views/userfold/bannerpage.ejs
+++ b/views/userfold/bannerpage.ejs
@@ -61,6 +61,9 @@
 </div>
 
   </section>
+
+  <%-include("./partials/footer") %>
+
 <script>
     function redirectToDetails(id){
        window.location.href="/productdescription/"+id
