--- a/views/userfold/editaddress.ejs
+++ b/views/userfold/editaddress.ejs
@@ -145,6 +145,7 @@ display: block; /* Show the sidebar when toggled */
         </form>
     </div>
 </div>
+<%-include("./partials/footer") %>
 
 <script>
    document.addEventListener("DOMContentLoaded", function () {
