--- a/views/userfold/orderdetails.ejs
+++ b/views/userfold/orderdetails.ejs
@@ -173,6 +173,7 @@
         </div>
     </div>
 </div>
+<%-include("./partials/footer") %>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script>
