--- a/views/userfold/usercoupons.ejs
+++ b/views/userfold/usercoupons.ejs
@@ -120,6 +120,7 @@
         <h2 style="color:orange">no coupons available</h2>
     <%}%>
 </div>
+<%-include("./partials/footer") %>
 
 <script>
      function copyToClipboard() {
