--- a/views/userfold/wallet.ejs
+++ b/views/userfold/wallet.ejs
@@ -96,6 +96,7 @@ const formattedDate = `${year}-${month}-${day}`;%>
 
     
   </div>
+  <%-include("./partials/footer") %>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
